[project]
name = "dl-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "keras (>=3.11.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "dl_playground", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
